# everybody-codes-2024

./: .gitignore  Cargo.toml  bacon.toml  justfile
benchmark/: Cargo.toml
benchmark/benches/: benchmarks.rs  criterion.rs
quest01/: Cargo.toml
quest01/src/: lib.rs  main.rs  part1.txt  part2.txt  part3.txt
quest02/: Cargo.toml
quest02/src/: lib.rs  main.rs  part1.txt  part2.txt  part3.txt
quest03/: Cargo.toml
quest03/src/: lib.rs  main.rs  part1.txt  part2.txt  part3.txt
quest04/: Cargo.toml
quest04/src/: lib.rs  main.rs  part1.txt  part2.txt  part3.txt
quest05/: Cargo.toml  doit.py
quest05/src/: lib.rs  main.rs  part1.txt  part2.txt  part3.txt
quest06/: Cargo.toml
quest06/src/: lib.rs  main.rs  part1.txt  part2.txt  part3.txt
quest07/: Cargo.toml
quest07/src/: lib.rs  main.rs  part1.txt  part2.txt  part3.txt
quest08/: Cargo.toml
quest08/src/: lib.rs  main.rs  part1.txt  part3.rs
quest09/: Cargo.toml
quest09/src/: lib.rs  main.rs  part1.txt  part2.txt  part3.txt
quest10/: Cargo.toml
quest10/src/: lib.rs  main.rs  part1.txt  part2.txt  part3.txt
quest11/: Cargo.toml
quest11/src/: lib.rs  main.rs  part1.txt  part2.txt  part3.txt
quest12/: Cargo.toml
quest12/src/: lib.rs  main.rs  part1.txt  part2.txt  part3.txt
quest13/: Cargo.toml
quest13/src/: lib.rs  main.rs  part1.txt  part2.txt  (+1 more)
quest14/: Cargo.toml
quest15/: Cargo.toml  map_analysis.py
quest15/src/: lib.rs  main.rs  part1.txt  part2.txt  part3.txt
quest16/: Cargo.toml
quest17/: Cargo.toml
quest18/: Cargo.toml
quest19/: Cargo.toml
quest20/: Cargo.toml
(+30 files in other folders)
