[package]
name = "benchmark"
version = "1.0.0"
edition = "2021"

[dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
quest01 = { path = "../quest01" }
quest02 = { path = "../quest02" }
quest03 = { path = "../quest03" }
quest04 = { path = "../quest04" }

[[bench]]
name = "criterion"
harness = false
