[package]
name = "benchmark"
version = "1.0.0"
edition = "2021"

[dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
quest01 = { path = "../quest01" }
quest02 = { path = "../quest02" }
quest03 = { path = "../quest03" }
quest04 = { path = "../quest04" }
quest05 = { path = "../quest05" }
quest06 = { path = "../quest06" }
quest07 = { path = "../quest07" }
quest08 = { path = "../quest08" }
quest09 = { path = "../quest09" }
quest10 = { path = "../quest10" }
quest11 = { path = "../quest11" }
quest12 = { path = "../quest12" }
quest13 = { path = "../quest13" }
quest14 = { path = "../quest14" }
quest15 = { path = "../quest15" }
quest16 = { path = "../quest16" }
quest17 = { path = "../quest17" }

[[bench]]
name = "criterion"
harness = false
