[package]
name = "quest15"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grid = "0.15.0"
itertools = "0.13.0"
pathfinding = "4.11.0"
petgraph = "0.6.5"
priority-queue = "2.1.1"
rayon = "1.10.0"
rustc-hash = "2.0.0"
